# openhsi_ros2

./: .gitignore  LICENSE  README.md  install_arena_sdk_ARM.sh  install_arena_sdk_x64.sh  package.xml  setup.cfg  setup.py
config/: cam_settings_lucid.json
config/lucid_calibration/: OpenHSI-06_settings_Mono12_bin1.json  OpenHSI-06_settings_Mono12_bin2.json  OpenHSI-06_settings_Mono8_bin1.json  OpenHSI-06_settings_Mono8_bin2.json  OpenHSI-06_settings_summary.txt  cam_settings_lucid_phoenix_1_6_IMX273.json  cam_settings_lucid_phoenix_1_6_IMX273_corrected.json
config/openhsi_headwall_jetson_archive/: cameras.py  capture.py  data.py
config/ximea_calibration/: cam_settings_ximea_MVCV-1082.json
launch/: hyperspec_launch.py
openhsi_ros2/: hyperspec_node.py
resources/lucid_calibration/: CALIBRATION_TUTORIAL.md  calibrate.py  convert_old_pkl.py  inspect_calibration_nc.py  openHSI_calibration_tutorial.py
