<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openhsi_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 package for XIMEA and Lucid Vision Lab hyperspectral cameras</description>
  
  <maintainer email="your_email@example.com">Logic</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/yourusername/openhsi_ros2</url>
  <url type="bugtracker">https://github.com/yourusername/openhsi_ros2/issues</url>
  
  <author email="your_email@example.com">Logic</author>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>openhsi_msgs</depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-xarray</exec_depend>
  <exec_depend>python3-netcdf4</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>